--- a/app/src/main/res/layout/astro_app_widget.xml
+++ b/app/src/main/res/layout/astro_app_widget.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/widget_layout"
-    android:background="@color/quantum_white_100"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/widget_background"
     android:clickable="true"
     android:focusable="true">
 
     <ImageView
         android:id="@+id/widget_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:contentDescription="@string/widget_image_content_description"
+        android:layout_width="@dimen/widget_image_dimensions"
+        android:layout_height="@dimen/widget_image_dimensions"
         android:layout_centerInParent="true"
+        android:contentDescription="@string/widget_image_content_description"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/widget_image_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/WidgetTextViewStyle"
         android:layout_above="@id/widget_image"
-        android:layout_centerHorizontal="true"
-        android:text="@string/widget_photo_of_the_day" />
+        android:layout_marginBottom="@dimen/margin_list_item"
+        android:text="@string/widget_photo_of_the_day"
+        android:textColor="@color/colorTextIcons" />
 
     <TextView
         android:id="@+id/widget_image_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/WidgetTextViewStyle"
         android:layout_below="@id/widget_image"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_list_item"
         tools:text="Moons near Jupiter" />
-
 </RelativeLayout>
