--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -11,4 +11,5 @@
     <dimen name="image_dimensions">48dp</dimen>
     <dimen name="observatory_list_item_margin">72dp</dimen>
     <dimen name="map_fragment_height">300dp</dimen>
+    <dimen name="widget_image_dimensions">110dp</dimen>
 </resources>
