--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -111,4 +111,11 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
+    <style name="WidgetTextViewStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle2</item>
+        <item name="android:textColor">@color/colorTextIcons</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
 </resources>
