--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/margin_list_item"
+    android:focusable="true"
+    android:descendantFocusability="afterDescendants"
     android:layout_marginBottom="@dimen/margin_list_item">
 
     <ImageView
