--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -25,6 +25,7 @@
             android:id="@+id/play_video_button"
             style="@style/ButtonStyle"
             android:text="@string/play_video_button"
+            android:nextFocusForward="@id/photo_title_text_view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/photo_title_text_view"
             app:layout_constraintLeft_toLeftOf="parent"
