--- a/app/src/main/res/layout/observatory_list_item.xml
+++ b/app/src/main/res/layout/observatory_list_item.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/margin"
     android:layout_marginTop="@dimen/margin_list_item"
+    android:focusable="true"
+    android:descendantFocusability="afterDescendants"
     android:layout_marginBottom="@dimen/margin_list_item">
 
     <TextView
