--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,25 +7,18 @@
         <item
             android:id="@+id/nav_photo"
             android:icon="@drawable/ic_camera_alt"
-            android:title="@string/menu_photo" />
+            android:title="@string/menu_photo"
+            android:nextFocusForward="@id/nav_asteroids"
+            />
         <item
             android:id="@+id/nav_asteroids"
             android:icon="@drawable/ic_asteroid_nav"
+            android:nextFocusForward="@id/nav_observatories"
             android:title="@string/menu_asteroids" />
         <item
             android:id="@+id/nav_observatories"
             android:icon="@drawable/ic_observatory"
+            android:nextFocusForward="@id/nav_photo"
             android:title="@string/menu_observatories" />
-
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-        </menu>
-    </item>
-
 </menu>
