--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">24dp</dimen>
     <dimen name="drawer_width">300dp</dimen>
     <dimen name="fragment_margin_start">@dimen/drawer_width</dimen>
+    <dimen name="photo_dimensions">400dp</dimen>
+    <dimen name="photo_description_text_size">18dp</dimen>
+    <dimen name="asteroid_text_size">16dp</dimen>
 </resources>
