--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
         <item name="android:paddingLeft">@dimen/margin</item>
         <item name="android:paddingTop">@dimen/margin</item>
         <item name="android:paddingRight">@dimen/margin</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:textSize">@dimen/photo_description_text_size</item>
     </style>
 
     <style name="EmptyTextViewStyle">
@@ -82,12 +82,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">@color/colorTextPrimary</item>
+        <item name="android:textSize">@dimen/asteroid_text_size</item>
     </style>
 
     <style name="AsteroidValueTextViewStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/colorTextSecondary</item>
+        <item name="android:textSize">@dimen/asteroid_text_size</item>
     </style>
 
     <style name="ObservatoryListItemTitleStyle">
