--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="135"
         android:centerColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimaryLight"
+        android:endColor="@color/colorTextIcons"
         android:startColor="@color/colorPrimaryDark"
         android:type="linear" />
 </shape>
