--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -6,6 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -25,6 +26,8 @@
             android:layout_width="@dimen/drawer_width"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            android:focusable="true"
+            android:clickable="true"
             app:headerLayout="@layout/nav_header_main"
             app:menu="@menu/activity_main_drawer" />
 
