--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusable="true"
+    android:clickable="true"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_photo"
             android:icon="@drawable/ic_camera_alt"
-            android:title="@string/menu_photo"
             android:nextFocusForward="@id/nav_asteroids"
-            />
+            android:title="@string/menu_photo" />
         <item
             android:id="@+id/nav_asteroids"
             android:icon="@drawable/ic_asteroid_nav"
